# my-codes

./: Awesome  Repo.md  AwesomeLeetcodeRepo.md  C++ Basic.md  Input in C.md  Input in Python.md  README.md  SQL.md  华师数据学院机试相关.md  核心代码模式与ACM模式.md
Array题型：双指针Two Pointers套路/: readme.md
C++ Basic/: Btree.cpp  point.cpp  point1.cpp  point2.cpp  point3.cpp  reference1.cpp
DFS&BFD[python]/: BFS.py  BFS_Shortest_Path.py
ECNU-OJ/: 1.A+B Problem.cpp  2569.Capitalize.cpp  Add two array elements separately.cpp
ECNU-TEST/: 2019-B-找零钱.cpp  2019-C-斐波那契数列.cpp  2019-D-字符串拼接.cpp  2019-E-矩阵求和.cpp  2019-F-阶乘.cpp  2019-G-分石子.cpp  2019-I-消消乐.cpp  2019-J-素数.cpp
Heapsort/: heapsort.c
KMP/: kmp.c
LeetCode-2023/: 1138.字母板上的路径.c  1138.字母板上的路径.cpp  1138.字母板上的路径.java  1138.字母板上的路径.py  1233.删除子文件夹.cpp  1233.删除子文件夹.java  1233.删除子文件夹.py  1234.替换子串得到平衡字符串.cpp  1234.替换子串得到平衡字符串.java  1234.替换子串得到平衡字符串.py  1237.找出给定方程的正整数解.cpp  1237.找出给定方程的正整数解.java  1237.找出给定方程的正整数解.py  1590.使数组和能被-p-整除.cpp  1604.警告一小时内使用相同员工卡大于等于三次的人.cpp  1604.警告一小时内使用相同员工卡大于等于三次的人.java  1604.警告一小时内使用相同员工卡大于等于三次的人.py  1605.给定行和列的和求可行矩阵.cpp  1605.给定行和列的和求可行矩阵.java  1605.给定行和列的和求可行矩阵.py  1615.最大网络秩.cpp  1615.最大网络秩.java  1615.最大网络秩.py  1616.分割两个字符串得到回文串.cpp  1616.分割两个字符串得到回文串.java  1616.分割两个字符串得到回文串.py  1625.执行操作后字典序最小的字符串.java  1625.执行操作后字典序最小的字符串.py  1632.矩阵转换后的秩.cpp  1653.使字符串平衡的最少删除次数.cpp  1653.使字符串平衡的最少删除次数.java  1653.使字符串平衡的最少删除次数.py  1658.将-x-减到-0-的最小操作数.cpp  1658.将-x-减到-0-的最小操作数.java  1658.将-x-减到-0-的最小操作数.py  1664.生成平衡数组的方案数.cpp  1669.合并两个链表.cpp  (+99 more)
modern-cmake-by-example/9_cache_string/answer/: CMakeLists.txt
(+520 files in other folders)
